--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,12 @@
 
            </LinearLayout>
 
+            <DatePicker
+                android:id="@+id/datePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"/>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
