--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,91 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#EAEAEA"
-    tools:context=".MainActivity"
-    android:padding="20dp"
-    android:orientation="vertical">
-    <androidx.cardview.widget.CardView
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="vm"
+            type="com.quizsquiz.room.ui.MainViewModel" />
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:background="#EAEAEA"
+        tools:context=".MainActivity"
+        android:padding="20dp"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="15dp">
-            <TextView
+            android:elevation="5dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="User entity:"
-                android:textSize="25sp"
-                android:gravity="center"/>
-            <EditText
-                android:id="@+id/et_user_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="User name"/>
-        </LinearLayout>
-        
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp">
-        <LinearLayout
+                android:orientation="vertical"
+                android:padding="15dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="User entity:"
+                    android:textSize="25sp"
+                    android:gravity="center" />
+
+                <EditText
+                    android:id="@+id/et_user_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@={vm.user.name}"
+                    android:hint="User name" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="15dp">
-            <TextView
+            android:elevation="5dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Pet entity:"
-                android:textSize="25sp"
-                android:gravity="center"/>
-            <EditText
-                android:id="@+id/et_pet_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Pet name"/>
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:paddingTop="20dp"
-               android:orientation="horizontal">
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Select user ID:"
-                   android:textColor="@android:color/black"
+                android:orientation="vertical"
+                android:padding="15dp">
 
-                   android:paddingEnd="20dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Pet entity:"
+                    android:textSize="25sp"
+                    android:gravity="center" />
 
-               <Spinner
-                   android:id="@+id/sp_ids"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/et_pet_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@={vm.pet.name}"
+                    android:hint="Pet name" />
+                <Button
+                    android:id="@+id/dp_select_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select date"
+                    />
+                <TextView
+                    android:id="@+id/sds"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{vm.selectedDate}"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="20dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Select user ID:"
+                        android:textColor="@android:color/black"
+
+                        android:paddingEnd="20dp" />
 
 
-           </LinearLayout>
 
-            <DatePicker
-                android:id="@+id/datePicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"/>
+                    <Spinner
+                        android:id="@+id/sp_ids"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
-        </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-    <Button
-        android:id="@+id/btn_create"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Create"/>
-</LinearLayout>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/btn_create"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Create" />
+    </LinearLayout>
+</layout>
