--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.quizsquiz.room.ui.MainViewModel" />
@@ -14,9 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EAEAEA"
-        tools:context=".MainActivity"
+        android:orientation="vertical"
         android:padding="20dp"
-        android:orientation="vertical">
+        tools:context=".MainActivity">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -32,24 +33,24 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:text="User entity:"
-                    android:textSize="25sp"
-                    android:gravity="center" />
+                    android:textSize="25sp" />
 
                 <EditText
                     android:id="@+id/et_user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@={vm.user.name}"
-                    android:hint="User name" />
+                    android:hint="User name"
+                    android:text="@={vm.user.name}" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:elevation="5dp">
 
             <LinearLayout
@@ -61,42 +62,42 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:text="Pet entity:"
-                    android:textSize="25sp"
-                    android:gravity="center" />
+                    android:textSize="25sp" />
 
                 <EditText
                     android:id="@+id/et_pet_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@={vm.pet.name}"
-                    android:hint="Pet name" />
+                    android:hint="Pet name"
+                    android:text="@={vm.pet.name}" />
+
                 <Button
                     android:id="@+id/dp_select_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Select date"
-                    />
+                    android:text="Select date" />
+
                 <TextView
-                    android:id="@+id/sds"
+                    android:id="@+id/tv_selected_date"
+                    android:text="@{vm.selectedDateInText}"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{vm.selectedDate}"/>
+                    android:layout_height="wrap_content" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="20dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingTop="20dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingEnd="20dp"
                         android:text="Select user ID:"
-                        android:textColor="@android:color/black"
 
-                        android:paddingEnd="20dp" />
-
+                        android:textColor="@android:color/black" />
 
 
                     <Spinner
@@ -114,9 +115,10 @@
 
         <Button
             android:id="@+id/btn_create"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:onClick="@{ () -> vm.create()}"
             android:text="Create" />
     </LinearLayout>
 </layout>
